--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-split-pane": "^2.0.3",
